wrap bug fixed

--- a/Css/result.css
+++ b/Css/result.css
@@ -27,6 +27,9 @@
 
 .text-bg {
     /* display: inline-block; */
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
     border-radius: 18px;
     height: 225px;
     width: 85vw;
